# satispaython

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: CI.yml  Release.yml  Test.yml  test.yml
paython/satispay/: core.py  satispay.py
paython/utils/: key_management.py
satispaython/: __init__.py  _api.py  _core.py  _exceptions.py  core.py  exceptions.py  satispay.py  utils.py
satispaython/utils/: time.py
src/satispaython/: __init__.py  _api.py  _auth.py  _client.py  _core.py  api.py  auth.py  client.py  utils.py
src/satispaython/utils/: __init__.py  utils.py
tests/: conftest.py  key.pem  test_api.py  test_core.py  test_utils.py
tests/data/: create_payment_production_no_optionals_signature.txt  create_payment_production_signature.txt  create_payment_staging_no_optionals_signature.txt  create_payment_staging_signature.txt  get_payment_details_production_signature.txt  get_payment_details_staging_signature.txt  key_id.txt  test_authentication_signature.txt
