[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "satispaython"
version = "0.2.5"
description = "A simple library to manage Satispay payments following the Web-button flow."
license = "GPL-3.0-or-later"
authors = ["Daniele Pira <daniele.pira@otto.to.it>"]
readme = "README.md"
repository = "https://github.com/otto-torino/satispaython"
keywords = ["python", "satispay"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{include = "satispaython", from="src"}]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
cryptography = "^3.3.1"

[tool.poetry.dev-dependencies]
responses = "^0.12.1"
pytest-freezegun = "^0.4.2"
pytest-cov = "^2.10.1"
tox = "^3.20.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = ["pytest-freezegun"]
minversion = "6.2"
addopts = "--cov --no-cov-on-fail"

[tool.coverage.run]
source = ["satispaython"]

[tool.coverage.paths]
source = ["src/satispaython", ".tox/py*/lib/python*/site-packages/satispaython"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
minversion = 3.20
envlist = clean,py36,py37,py38,py39,report

[testenv]
setenv = py{36,37,38,39}: COVERAGE_FILE=.coverage.{envname}
depends =
    {py36,py37,py38,py39}: clean
    report: py36,py37,py38,py39
deps =
    responses
    pytest-freezegun
    pytest-cov
commands = pytest

[testenv:clean]
deps = coverage[toml]
commands = coverage erase

[testenv:report]
deps = coverage[toml]
commands = coverage combine
"""
