[tool.poetry]
name = "satispaython"
version = "0.5.0"
description = "A simple library to manage Satispay payments following the Web-button flow."
authors = ["Daniele Pira <daniele.pira@otto.to.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^39.0"
httpx = "^0.23"
freezegun = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0"
pytest-asyncio = "^0.20"
respx = "^0.20"
tox = "^4.4"
pytest-icdiff = "^0.6"
black = "^23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = ["pytest-cov", "pytest-asyncio"]
addopts = "--cov --no-cov-on-fail"

[tool.coverage.run]
source = ["satispaython"]

[tool.coverage.paths]
source = ["src/satispaython", ".tox/py*/lib/python*/site-packages/satispaython"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = clean,py37,py38,py39,py310,py311,report

[testenv]
setenv = py{37,38,39}: COVERAGE_FILE=.coverage.{envname}
depends =
    {py37,py38,py39,py310,py311}: clean
    report: py37,py38,py39,py310,py311
deps =
    pytest-cov
    pytest-freezegun
    pytest-asyncio
    respx
commands = pytest

[testenv:clean]
deps = coverage[toml]
commands = coverage erase

[testenv:report]
deps = coverage[toml]
commands = coverage combine
"""
